# c3-for-c3

./: .gitignore  Justfile  LICENSE  README.md
c3/: square.c3
lib/: README.md
main/: CMakeLists.txt  hello_world_main.c  main.c3
